deployment-files/kustomize/telegraf/telegraf-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: telegraf
  name: telegraf
spec:
  selector:
    app: telegraf
  replicas: 1
  revisionHistoryLimit: 10
  restartPolicy: Always
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
        - command: ["/bin/bash", "-c", "--"]
          args:
            - echo "PWD" $(pwd);
              echo "User:" $(whoami);
              cat /entrypoint.sh;
              /entrypoint.sh telegraf --config /monitoring-stack-repo/telegraf/telegraf.conf;
          image: telegraf:latest
          name: telegraf
          ports:
            - containerPort: 9273
          volumeMounts:
            - mountPath: /monitoring-stack-repo
              name: monitoring-stack-repo
      restartPolicy: Always
      volumes:
        - name: monitoring-stack-repo
  dnsPolicy: ClusterFirst
